force-app/main/default/objects/Mass_Action_Log__c/Mass_Action_Log__c.object-meta.xml
<CustomObject>
    <description>Information about Mass Action batch job executions. You can safely delete these records after their related batch job has finished.
https://github.com/sfdx-mass-action-scheduler/sfdx-mass-action-scheduler/wiki/</description>
    <label>Mass Action Log</label>
    <nameField>
        <displayFormat>MAL-{000000}</displayFormat>
        <label>Mass Action Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Action Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>