force-app/main/default/objects/Mass_Action_Log__c/fields/Batch_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Batch_Success_Rate__c</fullName>
    <description>Visualizes the batch success percentage in color. Uses https://shields.io to generage the image in real-time.</description>
    <formula>IMAGE(
  &#39;https://img.shields.io/static/v1.svg?label=&amp;message=&#39; &amp;
  TEXT( Batch_Success_Percentage__c * 100 )  &amp; &#39;%&#39; &amp;
  &#39;&amp;color=&#39; &amp;
  IF( Batch_Success_Percentage__c &gt;= 0.90, &#39;4CC620&#39;, /* brightgreen */
    IF( Batch_Success_Percentage__c &gt;= 0.80, &#39;4bca81&#39;, /* green */
      IF( Batch_Success_Percentage__c &gt;= 0.50, &#39;ffb75d&#39;, /* orange */
        &#39;d4504c&#39; /* red */
      )
    )
  ),
  TEXT( Batch_Success_Percentage__c * 100 ) &amp; &#39;%&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visualizes the batch success percentage in color.</inlineHelpText>
    <label>Batch Success Rate</label>
    <type>Text</type>
</CustomField>