force-app/main/default/objects/Mass_Action_Log__c/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <description>Apex Batch Job ID. Since we can&#39;t have lookup fields to AsyncApexJob records, please standardize on the 15 character id, least common denominator for our use cases. SOQL WHERE filters will fail if stored value and filter value are not same length. Set as external id just so it&#39;s indexed. Don&#39;t UPSERT by this field value.</description>
    <inlineHelpText>Apex Batch Job ID. You can also monitor job status on the Apex Jobs page in Setup.</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>