force-app/main/default/objects/Mass_Action_Log__c/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <description>Job Scope from BatchApexErrorEvent. The Record IDs that are in scope if the event was fired from the execute() method of a batch job. If the batch job uses custom iterators instead of sObjects, JobScope is the toString() representation of the iterable objects.</description>
    <inlineHelpText>The Record IDs that are in scope if the event was fired from the execute() method of a batch job. If the batch job uses custom iterators instead of sObjects, JobScope is the toString() representation of the iterable objects.</inlineHelpText>
    <label>Job Scope</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>