force-app/main/default/objects/Mass_Action_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Apex Job extended status with details about any errors.</description>
    <inlineHelpText>Apex Job extended status with details about any errors.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>