force-app/main/default/objects/Mass_Action_Log__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational</fullName>
                <default>true</default>
                <label>ℹ️ Informational</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>✅ Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>🚫 Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>