force-app/main/default/objects/Mass_Action_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child logs capture details for child apex jobs that represent the executions of a batch job. A parent log captures details for the main apex job that represents the batch job as a whole.</description>
    <label>Parent Log</label>
    <referenceTo>Mass_Action_Log__c</referenceTo>
    <relationshipLabel>Related Logs</relationshipLabel>
    <relationshipName>Mass_Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>