force-app/main/default/objects/Mass_Action_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Pairs to the Timestamp field on the Mass Action Batch Apex Status Event object. Platform Events are processed asynchronously. The timestamp field represents the original date/time the cause of this event occurred. The value is displayed as a number to provide a way to sort log records in near their actual chronological order despite when the log records were eventually inserted.</description>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>