force-app/main/default/objects/Mass_Action_Log__c/fields/Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>Total_Batches__c</fullName>
    <description>Total number of batches processed. Each batch contains a set of records.</description>
    <inlineHelpText>Total number of batches processed. Each batch contains a set of records.</inlineHelpText>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>