force-app/main/default/objects/Mass_Action_Log__c/recordTypes/Child_Log.recordType-meta.xml
<RecordType>
    <fullName>Child_Log</fullName>
    <active>true</active>
    <description>Represents informational, success, and error messages of a batch job run for a configuration.</description>
    <label>Child Log</label>
</RecordType>