force-app/main/default/objects/Mass_Action_Log__c/recordTypes/Parent_Log.recordType-meta.xml
<RecordType>
    <fullName>Parent_Log</fullName>
    <active>true</active>
    <description>Exactly one parent log should exist per batch job id for a configuration.</description>
    <label>Parent Log</label>
</RecordType>