force-app/main/default/objects/Mass_Action_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mass_Action_Configuration__c</columns>
    <columns>Job_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Message_Type__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>